--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
     <div id="screens">
         <span id="screen"></span>
         <span id="result">Ingresa los puntos</span>
@@ -27,6 +28,7 @@
         <button class="button" value="0">0</button>
         <button class="equal">=</button>
     </div>
+    <div>Te amo amorcito ♥♥♥♥♥ </div>
     <script src="index.js"></script>
 </body>
 
