--- a/index.html
+++ b/index.html
@@ -1,35 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora Livejoy</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Calculadora para liveJoy</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
-    <div id="screens">
-        <span id="screen"></span>
-        <span id="result">Ingresa los puntos</span>
-    </div>
-    <div id="buttonsPad">
-        <button class="del">Borrar</button>
-        <button class="button" value="1">1</button>
-        <button class="button" value="2">2</button>
-        <button class="button" value="3">3</button>
-        <button class="button" value="4">4</button>
-        <button class="button" value="5">5</button>
-        <button class="button" value="6">6</button>
-        <button class="button" value="7">7</button>
-        <button class="button" value="8">8</button>
-        <button class="button" value="9">9</button>
-        <button class="button" value="0">0</button>
-        <button class="equal">=</button>
-    </div>
-    <div>Te amo amorcito ♥♥♥♥♥ </div>
-    <script src="index.js"></script>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
